Optimize Performance and Fix Bugs.